<resources>
    <string name="app_name">ToDo</string>
    <string name="work">Work</string>
    <string name="groceries">Groceries</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search_notes">Search notes</string>
    <string name="no_notes_here_yet">No notes here yet</string>
    <string name="title">Title</string>
    <string name="due_date">Due date</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_this_note">Delete this note?</string>
    <string name="added_successfully">Added successfully</string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="switch_layout">Switch layout</string>
</resources>