<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorDialogBackground">

        <TextView
            android:id="@+id/dialog_delete_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/delete_note"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorControlNormal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dialog_delete_note_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/dialog_delete_note_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_this_note"
            android:textColor="?attr/colorControlNormal"
            app:layout_constraintTop_toBottomOf="@id/dialog_delete_note_title"
            app:layout_constraintBottom_toTopOf="@id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorDialogNegativeButtonBackground"
            android:padding="14dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="?attr/colorDialogNegativeButtonText"
            android:textSize="16sp"
            app:cornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/dialog_delete_note_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintWidth_percent="0.38" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accentBlue"
            android:padding="14dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="30dp"
            app:layout_constraintTop_toTopOf="@id/cancel"
            app:layout_constraintBottom_toBottomOf="@id/cancel"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.38" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
